[gd_scene load_steps=11 format=2]

[ext_resource path="res://MenudeConstrucao.gd" type="Script" id=1]
[ext_resource path="res://Assets/armas/sword_iron.png" type="Texture" id=2]
[ext_resource path="res://Assets/armas/sword_silver.png" type="Texture" id=3]
[ext_resource path="res://Assets/tiles/tile_0010.png" type="Texture" id=4]
[ext_resource path="res://Assets/tiles/tile_0068.png" type="Texture" id=5]
[ext_resource path="res://Assets/tiles/tile_0011.png" type="Texture" id=6]
[ext_resource path="res://quicktheme.tres" type="Theme" id=7]
[ext_resource path="res://tiles_stone1.png" type="Texture" id=8]
[ext_resource path="res://Assets/tiles/Stone/stone2_floor.png" type="Texture" id=9]
[ext_resource path="res://MenudeConstrucaomain.gd" type="Script" id=10]

[node name="MenuConstrucao" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 10 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -300.0
margin_right = 250.0
margin_bottom = 300.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -300.0
margin_right = 250.0
margin_bottom = 300.0

[node name="Blocos" type="GridContainer" parent="Control/Panel"]
margin_top = 50.0
margin_right = 500.0
margin_bottom = 475.0
columns = 4

[node name="Pedra1" type="TextureButton" parent="Control/Panel/Blocos"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 8 )

[node name="Pedra2" type="TextureButton" parent="Control/Panel/Blocos"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
texture_normal = ExtResource( 9 )

[node name="TextureButton3" type="TextureButton" parent="Control/Panel/Blocos"]
margin_left = 72.0
margin_right = 90.0
margin_bottom = 32.0
texture_normal = ExtResource( 4 )

[node name="TextureButton4" type="TextureButton" parent="Control/Panel/Blocos"]
margin_left = 94.0
margin_right = 112.0
margin_bottom = 32.0
texture_normal = ExtResource( 6 )

[node name="TextureButton5" type="TextureButton" parent="Control/Panel/Blocos"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 54.0
texture_normal = ExtResource( 5 )

[node name="Armas" type="GridContainer" parent="Control/Panel"]
visible = false
margin_top = 50.0
margin_right = 500.0
margin_bottom = 500.0
columns = 4

[node name="Arma1" type="TextureButton" parent="Control/Panel/Armas"]
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )

[node name="Arma2" type="TextureButton" parent="Control/Panel/Armas"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture_normal = ExtResource( 3 )

[node name="Arma3" type="TextureButton" parent="Control/Panel/Armas"]
margin_left = 264.0
margin_right = 282.0
margin_bottom = 128.0
texture_normal = ExtResource( 4 )

[node name="Arma4" type="TextureButton" parent="Control/Panel/Armas"]
margin_left = 286.0
margin_right = 304.0
margin_bottom = 128.0
texture_normal = ExtResource( 6 )

[node name="Arma5" type="TextureButton" parent="Control/Panel/Armas"]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 150.0
texture_normal = ExtResource( 5 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Panel"]
pause_mode = 2
margin_right = 90.0
margin_bottom = 40.0

[node name="Blocos" type="Button" parent="Control/Panel/HBoxContainer2"]
margin_right = 108.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 7 )
text = "Blocos"

[node name="Armas" type="Button" parent="Control/Panel/HBoxContainer2"]
margin_left = 112.0
margin_right = 213.0
margin_bottom = 40.0
size_flags_horizontal = 3
theme = ExtResource( 7 )
text = "Armas"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel"]
margin_left = 2.0
margin_top = 550.0
margin_right = 86.0
margin_bottom = 570.0

[node name="Button" type="Button" parent="Control/Panel/HBoxContainer"]
margin_right = 84.0
margin_bottom = 34.0
size_flags_horizontal = 3
theme = ExtResource( 7 )
text = "Usar"

[node name="Label" type="Label" parent="Control/Panel"]
margin_left = 4.0
margin_top = 500.0
margin_right = 139.0
margin_bottom = 534.0
theme = ExtResource( 7 )
text = "	Sele"

[connection signal="pressed" from="Control/Panel/Blocos/Pedra1" to="." method="_on_Pedra1_pressed"]
[connection signal="pressed" from="Control/Panel/Blocos/Pedra2" to="." method="_on_Pedra2_pressed"]
[connection signal="pressed" from="Control/Panel/Armas/Arma1" to="." method="_on_Arma1_pressed"]
[connection signal="pressed" from="Control/Panel/Armas/Arma2" to="." method="_on_Arma2_pressed"]
[connection signal="pressed" from="Control/Panel/HBoxContainer2/Blocos" to="." method="Blocos_Menu_Aberto"]
[connection signal="pressed" from="Control/Panel/HBoxContainer2/Blocos" to="Control" method="Blocos_Menu_Aberto"]
[connection signal="pressed" from="Control/Panel/HBoxContainer2/Armas" to="." method="Armas_Menu_Aberto"]
[connection signal="pressed" from="Control/Panel/HBoxContainer2/Armas" to="Control" method="Armas_Menu_Aberto"]
[connection signal="pressed" from="Control/Panel/HBoxContainer/Button" to="." method="_on_Button_pressed"]
